--- a/management/mapper_task/Makefile
+++ b/management/mapper_task/Makefile
@@ -11,25 +11,36 @@ INCUTILS = ../../libmutils/src/include
 CC = riscv64-elf-gcc
 OBJDUMP = riscv64-elf-objdump
 OBJCOPY = riscv64-elf-objcopy
+SIZE    = riscv64-elf-size
+READELF = riscv64-elf-readelf
 
 LIBDIR = ../../libmemphis
 UTILDIR = ../../libmutils
 
-CFLAGS	+= -march=rv32im -mabi=ilp32 -Os -fdata-sections -ffunction-sections -Wall -std=c11 -I$(INCDIR)
-LDFLAGS += -march=rv32im -mabi=ilp32 -Wl,--gc-sections -lmemphis -lmutils
+CFLAGS	+= -march=rv32i -mabi=ilp32 -Os -fdata-sections -ffunction-sections -flto -Wall -std=c11 -I$(INCDIR) -I../../libmutils/src/include -I../../libmemphis/src/include
+LDFLAGS += -L../../libmemphis -L../../libmutils --specs=nano.specs -T custom.ld -Wl,--gc-sections,-flto -u _getpid -march=rv32i -mabi=ilp32 -lmemphis -lmutils
 
 SRC = $(wildcard $(SRCDIR)/*.c)
 OBJ = $(patsubst %.c, %.o, $(SRC))
 
 all: $(TARGET).txt $(TARGET).lst
 
-$(TARGET).txt: $(TARGET).bin
+$(TARGET).txt: i$(TARGET).bin d$(TARGET).bin $(TARGET).elf
 	@printf "${BLUE}Dumping task: %s ...${NC}\n" "$(TARGET)"
-	@hexdump -v -e '1/4 "%08x" "\n"' $< > $@
+	@$(SIZE) -G $(TARGET).elf | sed -n '2p' | awk '{printf "%08x\n", $$1}' > $@
+	@$(SIZE) -G $(TARGET).elf | sed -n '2p' | awk '{printf "%08x\n", $$2}' >> $@
+	@$(SIZE) -G $(TARGET).elf | sed -n '2p' | awk '{printf "%08x\n", $$3}' >> $@
+	@$(READELF) -h $(TARGET).elf | awk '/Entry point/ { printf "%08x\n", strtonum($$4) }' >> $@
+	@hexdump -v -e '1/4 "%08x" "\n"' i$(TARGET).bin >> $@
+	@hexdump -v -e '1/4 "%08x" "\n"' d$(TARGET).bin >> $@
 
-$(TARGET).bin: $(TARGET).elf
-	@printf "${BLUE}Generating binary for task: %s ...${NC}\n" "$(TARGET)"
-	@$(OBJCOPY) -O binary $< $@
+d$(TARGET).bin: $(TARGET).elf
+	@printf "${BLUE}Generating data binary for task: %s ...${NC}\n" "$(TARGET)"
+	@$(OBJCOPY) -j .rodata -j .eh_frame -j .init_array -j .fini_array -j .data -j .sdata -O binary $< $@
+
+i$(TARGET).bin: $(TARGET).elf
+	@printf "${BLUE}Generating instruction binary for task: %s ...${NC}\n" "$(TARGET)"
+	@$(OBJCOPY) -j .text -O binary $< $@
 
 $(TARGET).elf: $(OBJ) $(LIBOBJ)
 	@printf "${BLUE}Linking task: %s ...${NC}\n" "$(TARGET)"
@@ -45,7 +56,8 @@ $(SRCDIR)/%.o: $(SRCDIR)/%.c
 
 clean:
 	@rm -f $(SRCDIR)/*.o
-	@rm -f $(TARGET).bin
+	@rm -f i$(TARGET).bin
+	@rm -f d$(TARGET).bin
 	@rm -f $(TARGET).elf
 	@rm -f $(TARGET).lst
 	@rm -f $(TARGET).map
