--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,16 @@
 [submodule "libmemphis"]
 	path = libmemphis
 	url = https://github.com/gaph-pucrs/libmemphis
+	branch = phivers
 [submodule "libmutils"]
 	path = libmutils
 	url = https://github.com/gaph-pucrs/libmutils
+	branch = master
 [submodule "MAestro"]
 	path = MAestro
 	url = https://github.com/gaph-pucrs/MAestro
+	branch = phivers
 [submodule "Phivers"]
 	path = Phivers
 	url = https://github.com/gaph-pucrs/Phivers
+	branch = master
